--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "noUnusedLocals": true,
         "sourceMap": true,
         "inlineSources": true,
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "declaration": true
     }
 }
