autogenerate client from openapi.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,9 @@
         "inlineSources": true,
         "strictNullChecks": true,
         "declaration": true
+    },
+    "include": ["src/**/*"],
+    "tsc-alias": {
+        "resolveFullPaths": true
     }
 }
