--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@short.io/client-node",
-    "version": "2.1.0",
+    "version": "2.1.1",
     "description": "",
     "main": "dist/index.js",
     "type": "module",
@@ -8,7 +8,7 @@
     "types": "dist/index.d.ts",
     "files": ["dist/**"],
     "scripts": {
-        "generate": "openapi-ts -f openapi/config.ts && sed -i 's/createConfig\\(\\)/createConfig({\"baseUrl\": \"https:\\/\\/api.short.io\"})/' src/sdk.gen.ts",
+        "generate": "openapi-ts -f openapi/config.ts && sed -i 's/createConfig()/createConfig({\"baseUrl\": \"https:\\/\\/api.short.io\"})/' src/sdk.gen.ts",
         "compile": "tsc --build . && tsc-alias",
         "prepare": "npm run compile",
 	"prepublishOnly": "npm run compile"
