--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@short.io/client-node",
-    "version": "2.1.1",
+    "version": "2.2.0",
     "description": "",
     "main": "dist/index.js",
     "type": "module",
@@ -8,7 +8,7 @@
     "types": "dist/index.d.ts",
     "files": ["dist/**"],
     "scripts": {
-        "generate": "openapi-ts -f openapi/config.ts && sed -i 's/createConfig()/createConfig({\"baseUrl\": \"https:\\/\\/api.short.io\"})/' src/sdk.gen.ts",
+        "generate": "openapi-ts -f openapi/config.ts",
         "compile": "tsc --build . && tsc-alias",
         "prepare": "npm run compile",
 	"prepublishOnly": "npm run compile"
@@ -33,7 +33,7 @@
     "prettier": "@short.io/eslint-config/prettier",
     "devDependencies": {
         "@eslint/js": "^9.16.0",
-        "@hey-api/openapi-ts": "^0.58.0",
+        "@hey-api/openapi-ts": "^0.59.0",
         "@types/node": "^22.10.1",
         "eslint": "^9.16.0",
         "globals": "^15.13.0",
@@ -42,7 +42,7 @@
         "typescript-eslint": "^8.17.0"
     },
     "dependencies": {
-        "@hey-api/client-fetch": "^0.5.0"
+        "@hey-api/client-fetch": "^0.5.1"
     },
     "packageManager": "yarn@1.22.22+sha256.c17d3797fb9a9115bf375e31bfd30058cac6bc9c3b8807a3d8cb2094794b51ca"
 }
