--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,4 +20,9 @@ jobs:
 
       - run: yarn install --frozen-lockfile
 
+      - name: Set version from release tag
+        run: npm version "${GITHUB_REF_NAME#v}" --no-git-tag-version
+
+      - run: npm run compile
+
       - run: npm publish --provenance --access public
